--- a/clock.css
+++ b/clock.css
@@ -12,11 +12,11 @@ body{
     background: linear-gradient(45deg, black, transparent,red);
 }
 .clock{
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
     background-color:yellow;
     border-radius: 50%;
-    border: 2px solid;
+    border: 12px solid aliceblue;
     position: relative;
 }
 .clock .nmber{
@@ -25,6 +25,9 @@ body{
     text-align: center;
     width: 100%;
     height: 100%;
+    font-size: 40px;
+    font-weight:800 ;
+    color: black;
     transform: rotate(var(--rotation));
 }
 .clock .nmber1{
@@ -69,8 +72,8 @@ body{
     position: absolute;
     background-color: black;
     z-index: 10;
-    width: 15px;
-    height: 15px;
+    width: 25px;
+    height: 25px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
